<resources>
    <string name="app_name">TestAdventure</string>
    <string name="new_game">NOWA GRA</string>
    <string name="quit_game">WYJDŹ Z GRY</string>
    <string name="female">Kobieta</string>
    <string name="male">Mężczyzna</string>
    <string name="choose_your_gender">Wybierz Płeć</string>
    <string name="type_your_name">Wpisz Imię</string>
    <string name="hint">Twoje Imię</string>
    <string name="confirm">Zatwierdź</string>
    <string name="choose_character_class">Wybierz Klasę Postaci</string>
    <string name="assassin">Zabójca</string>
    <string name="mage">Mag</string>
    <string name="warrior">Wojownik</string>
    <string name="new_game_after_dead">NOWA GRA</string>
    <string name="checkpoint">OSTATNI ZAPIS</string>
    <string name="you_have_found_weapon">ZNALAZŁEŚ BRON !</string>
    <string name="take">WEŹ</string>
    <string name="todo">TODO</string>
    <string name="hello_may_freind">Witaj Przyjacielu</string>
    <string name="name">Imię:</string>
    <string name="health_points">Punkty Zdrowia:</string>
    <string name="attack2">Atak:</string>
    <string name="agillity">Zwinność:</string>
    <string name="strength">Siła:</string>
    <string name="intelligence">Inteligencja:</string>
    <string name="class1">Klasa:</string>
    <string name="return1">Powrót</string>
    <string name="weapon_name">Nazwa Broni:</string>
    <string name="attack">Atak:</string>
    <string name="show_stats">Zaktualizuj Statystyki</string>
    <string name="introduction">Przykładowy tekst</string>
    <!--Cześć, nazywam się Mateusz, a to jest moja pierwsza gra mobilna. Mam nadzieję, że Ci się spodoba. Miłej zabawy!-->
    <string name="gifavatar">TODO</string>
    <string name="try_to_fight">Podejmij Walkę</string>
    <string name="you_were_unexpectedlly_attacked">ZOSTAŁEŚ ZAATAKOWANY!</string>
    <string name="UnexpectedAssault">TODO</string>
    <string name="czas_rusza_dalej">Czas ruszać dalej</string>
    <string name="unikniecie_walki">DZIĘKI WRODZONEMU SPRYTOWI UDAŁO CI SIĘ UNIKNĄĆ WALKI !</string>
    <string name="just_look_on_a_massacre">Podczas podróży zauważyłeś walkę. Patrząć jak inni podróżnicy są masakrowani przez nieznane Ci stworzenie, przemieszczasz się dalej w obranym przez siebie kierunku.</string>
    <string name="strange_beast">Dłuższa droga pozwoliła Ci zaoszczędzić sobie walki z bandytami w lesie. Brnąc przez ciche mokradła napotkałeś niezną Ci do tej pory abominację. To coś siedziało na odosobnionym kamieniu na środku sadzawki wpatrując się w Ciebie swoim pustym spojrzeniem. Intuicja podpowiadała Ci, że najlepiej jest się spokojnie wycofać. Tak też zrobiłeś. Będąc w bezpiecznej odległości postanowiłeś spojrzeć za siebie ostatni raz, jednak gdy się odwróciłeś miejsce, spoczynku bestii było puste.</string>
    <string name="good_end">Ostatecznie po zaciekłej walce udało Ci się pokonać bestię, po powrocie mam zamiar rozprawić się ze zleceniodawcą - pomyslałeś. Dzisiaj pozbyłem się ostatniego żyjącego pradawnego stwora. A przynajmniej tak Ci się wydawało…</string>
    <string name="bad_end">Ostatecznie po zaciekłej walce nie udało Ci się pokonać bestii, sporowadzając tym samym terror i grozę na Twoją krainę. Gdzie bestia będzie rządzić po wsze czasy. Przynajmniej tak się wszystkim wydawało…</string>
    <string name="first_choice">-Hej Ty! - Hej Ty tam! Do Ciebie mówię.. Wstawaj, Garond stłukł Cię na kwaśne jabłko. Mówiłem żebyś uważał na słowa. Pozwól, że się przedstawię: Jestem Greg. (Cały obolały i posiniaczony podnosisz się z ziemii) - Nazywam się… - Nie obchodzi mnie jak się nazywasz! Wiem jedno, jesteś tylko nędznym niewolnikiem i masz przed sobą dwa wyjścia. Pierwsze sprzedam Cię jako najemnika do Obozu na Skalistym Brzegu lub pozostawię Cię bez opieki tutaj na śmierć jak spróbujesz jeszcze coś odwalić. Wybieraj.</string>
    <string name="camp_on_rock_shore">Obóz na Skalistym Brzegu</string>
    <string name="try_to_get_out">Spróbuj się uwolnić</string>
    <string name="gate">Dokonałeś słusznego wyboru. Niechciałbym tracić tak cennego towaru. (Po tym Greg przyniósł Ci jakieś liche ubrania, pajdę starego czerstwego chleba i miskę wody. Nic nie pamiętasz. Kim jesteś, kim byłeś ani jak znalazłeś się na tym pierdolonym statku zakuty w kajdany! Cel masz jeden. Przeczekać aż wszystko ucichnie i postarać się jakoś uciec z obozu.) Kiedy dostanę jakąś broń? - Ty broń! Ha żebyś nasz wszystkich powyżynał gdy będziemy spać?! Nie dostaniesz żadnej broni! - Ale jak mam być najemnikiem skoro nie będę mógł się bronić? - Wymyśl coś! Ahhh już jest brama obozu! Tylko bez żadnych sztuczek strażnik bramy do najmilszych nie należy hehe. (Twym oczom ukazuje się potężna bram a przy niej jeden samotnie stojący mężczyzna. Nie wygląda na kogoś z kim można pogrywać). -Nazywam się Thorus </string>
    <string name="be_calm">Bez numerów</string>
    <string name="thief_the_key">Ukradnij Klucze od Bramy</string>
    <string name="chaos_in_camp">(Pierwszej nocy, gdy nie potrafiłeś zasnąć zajęty rozważeniami nad przyszłością, przeszłością i najważniesze kim kiedyś byłeś, dało słychać się potężny huk ! Obóz został zaatakowany! W jednej chwili wybuchła panika i chaos. To była twoja szansa, twój szczęśliwy traf! Musisz wymyślić jakiś plan ucieczki, myśl, myśl…)</string>
    <string name="backdor">Wyjdź Tylnymi drzwiami</string>
    <string name="armory">Przejdź przez okno do zbrojowni (ryzykowne)</string>
    <string name="wait_in_house">Poczekaj w chacie</string>
    <string name="weapon_text">-Dziwne mam wrażenie, że już kiedyś posługiwałem się taką bronią.. Na dodatek jeszcze podejrzania pulsuje w mojej dłoni… (w sumie nie ważne pomyślałeś) -Dzięki niej w końcu mogę się bronić!!</string>
    <string name="hide_in_drawer">(Postanowiłeś przeczekać w chacie tchórzu.. nadomiar złego schowałeś się w szafie… serio… lepszej kryjówki nie było? Gdy tak czekałeś nagle usłyszałeś niepokojące dźwięki z oddali pomieszczenia ! Co to może być pomyślałeś.. co zrobić?)</string>
    <string name="check_this_out">Powinieneś to sprawdzić</string>
    <string name="lost_hp">(Po zaciekłej walce w końcu udało Ci się wygrać. I tak jesteś zdziwiony, że dalej żyjesz.. Nie obyło się jednak bez strat. Przez brak broni straciłeś rękę oraz ogarnia Cię dziwne uczucie, klątwy. Nie wziąłeś broni oponęta ponieważ złamala się w trakcie starcia. Jednak broń nie jeste moim największym zmartwieniem - pomyślałeś. Pora się stąd wydostać. Mocno poobijany, ale żywy dotarleś na skraj lasu niedaleko wioski. Bez planu, pożywienia. Postanowiłeś ruszyć dalej w głąb lasu.)</string>
    <string name="to_the_forest">Do Lasu</string>
    <string name="win_fight">(Po zaciekłej walce z bandytą w końcu udało Ci się wygrać. I tak jesteś zdziwiony, że dalej żyjesz.. Zdziwieniu nie uszło też fakt jak dobrze władasz swoją bronią i tylko dzięki niej nie poniosłeś większych strat. Pora się stąd wydostać. Cały i zdrów dotałeś na skraj lasu niedaleko wioski. Bez planu, pożywienia., ale z bronią i determinacją. Postanowiłeś ruszyć dalej w głąb lasu.)</string>
    <string name="baal_fight">(Po półtora roku tułaczki i szukania własnej tożsamości mocno rozwinąłeś swoje umiejętności bojowe oraz zająłeś się zabijaniem potworów na zlecenie. Kolejnym twoim celem okazał się niewielki smok w Górach Skalistych. Bez problemu się z nim uporałeś. Coś jednak było nie tak. W jednej chwili z za gór wyłoniło się potężne ciało bestii. Orshabaal. Dlatego nagroda była podjerzanie wysoka.. Nie minęła chwila Baal cisnął w Ciebie kawałkiem góry, którą bezporblemowo jedną łapą trącił w twoją stronę…</string>
    <string name="dalej">dalej</string>
    <string name="orsh_bad">Po półtora roku tułaczki ledwo żywy dotarłeś do miasta, w którym jednak spotkała Cię kolejna nieprzyjemność. Orshabaal, nigdy nie widziałeś tego stwora na oczy, a teraz stoi przed tobą wpatrując się w Ciebie. W jednej chwili ogarnęła cię ciemność. Stara klątwa dała o sobie znać. Podiąłeś jednak walkę. W jednym momencie Orhsh cisną w Ciebie głazem…</string>
    <string name="sneak_peak">(Udało Ci się!!! Thorus okazał się zwykłym strażnikiem, któremu przetrzepiesz skórę jeszcze ze trzy razy ;) Wieczorem.. wieczorem stąd zwieję - pomyślałeś. Czas mijał, a ty spokojnie czekałeś do momentu, aż wszyscy zasną aby móc wprowadzić plan w życie… Czas nastał. Cicho rozkułeś kajdany i niepostrzeżenie wymknąłeś się z obozu. Docierając do rozdroża z oddali zauważyłeś, że Obóz, w którym niedawne przebywałeś został zaatakowany. Ha tragedia - pomyślałeś. Nie ma czasu do stracenia trzeba ruszać dalej.)</string>
    <string name="chooser">Kawałek dalej trafiłeś na rozdroże dróg. Mam do wyboru dwie ścieżki jedna prowadzi do lasu i mokradeł (długa i ciężka przeprawa), a druga w kierunku gór. Co wybrać?</string>
    <string name="to_the_mountains">W góry</string>
    <string name="mountain_death">Podczas przeprawy przez góry napotkałeś Małego Smoka. Uciekając spadłeś w przepaść.</string>
    <string name="camp_death">Przy tylnym wyjściu z chaty zaczaił się jeden z bandytów czekając na niedobitków. Szybkim ruchem zciął Ci głowę.</string>
    <string name="narwaniec">(Jednak nie wyszła ta cała próba uwolnienia.. Mogłem się tego spodziewać, osłabiony i wygłodnialy nie dałem rady Gregowi. Nie wiem ile czasu minęło, ale obudziłem się w gnojowniku nieopodal gościńca. Po Gregu i jego załodze nie było śladu. Co robić?</string>
    <string name="ocean_twelve">Zejdź do morza</string>
    <string name="wejd_do_groty">Wejdź do groty</string>
    <string name="poczekaj_na_drodze">Poczekaj na gościńcu</string>
    <string name="ocean_swamp">(Podążając wzdłuż wybrzeża nic ciekawego Ci się nie przytrafiło oprócz tego, że udało Ci się znaleźć ostrygi i raki, które pozwoliły Ci odzyskać trochę siły. Szedłeś tak długo, aż trafiłeś na bagnisko.)</string>
    <string name="na_bagna">Na bagna!</string>
    <string name="gang_of_bandits">Czekając na gościncu grupa przejezdnych bandytów postanowiła się z tobą trochę zabawić… twoje zwłoki posłużyły jako karma dla ich ogarów.</string>
    <string name="chose_wisely">(Po miesiącu dotarłeś do rozstaju dróg. Są trzy ścieżki z czego żadna nie wygląda zachęcająco. Obok szosy jest tabliczka: Wybieraj mądrze.)</string>
    <string name="skaliste_bagna">Skaliste Bagna</string>
    <string name="hehe_walaka_lose">(Po ciężkiej walce udało Ci się jakimś cudem wygrać.. sam nie wiesz skąd te umiejętności bo nie pamiętasz kim byłeś kiedyś, co robiłeś i do kąd zmierzałeś. Niestety walka nie skończyła się bez strat. Straciłeś lewą nogę, w którą wdało się zakażenie oraz czujesz na sobie piętno klątwy. Pradawnej klątwy.)</string>
    <string name="easy_exp">(Dzięki zdobytej wcześniej broni pokonanie bestii było dla Ciebie niczym spacerek po linie zawieszonej nad przepaścią. Z zamkniętymi oczami.</string>
    <string name="v1_0">v1.0</string>
    <string name="hidden">Ukryte</string>
</resources>
